--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
+flask
+openai == 1.3.6
+openpyxl
+pdfplumber
+pymupdf
+PyMuPDF
+Pillow
+pytesseract
+gunicorn==22.0.0
+pandas
+celery==5.2.3
+redis==4.5.2
 
